# gmo-bot-conoha

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  ハンドオフ.md  次セッションプロンプト.md
bot-manager/: app.py  auth.py  config.py  requirements.txt
context/: mentor_response_20260522_B1_B5.txt  status_for_mentor.md
deploy/: bot-manager.service  conoha-reset-password.py  deploy.sh  diagnose-api.ps1  download-release.bat  download-release.ps1  gmo-bot.service  recover-and-tunnel.ps1  setup-bot-manager.sh  setup-cloudflared.ps1  windows-setup.bat  windows-setup.ps1
docs/: EXP_SUMMARY_TEMPLATE.md  conoha-5-requirements-coverage-20260529.md  hl-airdrop-s1-retro.md  hl-step1-route-checklist-routeA-v0.3.md  hl-step1-route-checklist.md  mentor-mid-review-20260522.md  mentor-monthly-review-20260615.md  mentor-step1-report-20260525.md  monitoring-migration-draft-20260518.md  step1-user-prep-guide-20260520.md  verification-checklist.md
scripts/: _monitor_lock.py  analyze_gmo_truth.py  analyze_metrics.py  analyze_spread_capture.py  backtest_corrected.py  backtest_d.py  backtest_ef.py  backtest_optimal.py  backtest_realistic.py  backtest_sanity.py  backtest_validation.py  bitget_clean_dsr.py  collect_bitflyer.py  collect_ws.py  daily_healthcheck.py  dsr_check.py  fr_analyzer.py  fr_correlation.py  fr_monitor.py  gate0_cvkelly.py  hedge_cost_recalc.py  hl_fr_monitor.py  lead_lag_analysis.py  lead_lag_v2.py  lead_lag_ws.py  measure_latency.py  measure_orderbook.py  mexc_fr_monitor.py  monitor_watchdog.sh  oracle_resolution_backtest.py  simulate_forced_close.py  test_fr_analyzer.py  (+2 more)
(+126 files in other folders)
