[package]
name = "trading_bot"
version = "0.1.0"
edition = "2021"
publish = false
autoexamples = false

[features]
default = ["bitflyer", "gmo"]
bitflyer = []
gmo = []

[[bin]]
name = "bitflyer"
path = "src/bitflyer_bot.rs"

[[bin]]
name = "gmo"
path = "src/gmo_bot.rs"

[dependencies]
url = "2.5.0"
hyper = "1.3.1"
reqwest = { version = "0.12.4", features = ["json"] }
futures = { version = "0.3.30", default-features = true }
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"]}
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
ring = "0.17.8"
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.10.0"
parking_lot = "0.12.2"
chrono = { version = "0.4.38", features = ["serde"] }
serde_yaml = "0.9.34"
polars = "0.39.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "1.3"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
debug = true

[lib]
name = "trading_bot"
path = "src/lib.rs"

[dev-dependencies]
serde_yaml = "0.9.34"
